--- a/css/whotrades.css
+++ b/css/whotrades.css
@@ -1,13 +1,100 @@
 body {
-    padding: 0;
-    margin: 0;
     font: 13px "Helvetica Neue", Arial, Helvetica, sans-serif;
     color: #444;
 }
 
 
-.popup {
-    padding: 10px;
+.heading {
+
+}
+
+.heading_1 {
+    margin: 0 0 15px;
+    font-size: 36px;
+    text-align: center;
+}
+
+.heading_2 {
+    margin: 15px 0;
+    font-size: 30px;
+}
+
+.heading_3 {
+    margin: 15px 0;
+    font-size: 24px;
+}
+
+
+
+
+.link {
+    color: #47c;
+    cursor: pointer;
+}
+
+.link_pseudo {
+    border-bottom-style: dashed;
+    border-bottom-width: 1px;
+}
+
+
+
+
+.input {
+    width: 100%;
+    height: 30px;
+    padding: 5px 10px;
+    font-size: 14px;
+    font-family: inherit;
+    color: inherit;
+    resize: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+
+
+
+.button {
+    display: inline-block;
+    vertical-align: middle;
+    height: 30px;
+    padding: 7px 10px;
+    font-size: 14px;
+    font-weight: 400;
+    font-family: inherit;
+    line-height: 1.1;
+    text-decoration: none;
+    text-align: center;
+    border: none;
+    border-radius: 2px;
+    box-sizing: border-box;
+    user-select: none;
+    cursor: pointer;
+}
+
+.button_theme_green {
+    background-color: #5c6;
+    color: #fff;
+}
+
+.button_theme_blue {
+    background-color: #49e;
+    color: #fff;
+}
+
+.button_type_file {
+    position: relative;
+    overflow: hidden;
+}
+
+.button_type_file input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 200px;
+    opacity: 0;
+    cursor: pointer;
 }
 
 
@@ -17,13 +104,22 @@ body {
     list-style: none;
 }
 
+.popup__list_level_2 {
+    margin-left: 10px;
+    display: none;
+}
 
-.popup__item {
+.popup__item.active > .popup__list {
+    display: block;
+}
+
+
+.popup__item-caption {
     padding: 5px 10px;
     cursor: pointer;
     white-space: nowrap;
 }
-.popup__item:hover {
+.popup__item-caption:hover {
     background-color: #f1f1f1;
 }
 
@@ -43,15 +139,16 @@ body {
 
 .options {
     width: 800px;
-    margin: 50px auto;
+    margin: 0 auto;
     padding: 30px;
-    background-color: #f1f3f5;
-    box-shadow: 0 2px 10px rgba(0,0,0,.5);
+    background-color: #f5f8fa;
+    border-top: 5px solid #5c6;
+    box-shadow: 0 1px 2px rgba(0,0,0,.5);
 }
 
 
 .options__row {
-    margin: 15px 0 0 -2%;
+    margin: 15px 0 15px -2%;
 }
 .options__row:after {
     display: block;
@@ -65,18 +162,23 @@ body {
     margin-left: 2%;
 }
 
-.options__cell_w_20 {
-    width: 18%;
+.options__cell_w_10 {
+    width: 8%;
 }
 
-.options__cell_w_40 {
-    width: 38%;
+.options__cell_w_30 {
+    width: 28%;
+}
+
+.options__cell_w_45 {
+    width: 43%;
 }
 
 
 .options__row_remove {
     display: inline-block;
-    margin-top: 10px;
+    margin-top: 6px;
+    color: #f55;
 }
 
 
@@ -87,83 +189,12 @@ body {
 }
 
 
-.options__save {
-    margin-top: 20px;
+.options__fieldset {
+    border: 1px solid #ccc;
+    margin-bottom: 50px;
 }
 
 
-
-
-.heading {
-
-}
-
-.heading_1 {
-    margin: 0 0 15px;
-    padding-bottom: 30px;
-    font-size: 36px;
-    text-align: center;
-    border-bottom: 1px solid #bbb;
-}
-
-.heading_2 {
-    margin: 15px 0;
-    font-size: 30px;
-}
-
-.heading_3 {
-    margin: 15px 0;
-    font-size: 24px;
-}
-
-
-
-
-.link {
-    color: #49e;
-    cursor: pointer;
-}
-
-.link_pseudo {
-    border-bottom-style: dashed;
-    border-bottom-width: 1px;
-}
-
-
-
-
-.input {
-    width: 100%;
-    height: 40px;
-    padding: 10px;
-    font-size: 16px;
-    font-family: inherit;
-    color: inherit;
-    resize: none;
-    border: 1px solid #bbb;
-    box-sizing: border-box;
-}
-
-
-
-
-.button {
-    display: inline-block;
-    height: 40px;
-    padding: 10px 15px;
-    font-size: 14px;
-    font-family: inherit;
-    line-height: 1.1;
-    text-decoration: none;
-    text-align: center;
-    border: none;
-    border-radius: 2px;
-    box-sizing: border-box;
-    user-select: none;
-    cursor: pointer;
-}
-
-.button_theme_blue {
-    background-color: #49e;
-    color: #fff;
+.options__form {
+    margin-bottom: 30px;
 }
