--- a/css/common.css
+++ b/css/common.css
@@ -37,14 +37,16 @@ body {
 
 .input {
     width: 100%;
-    height: 30px;
-    padding: 5px 10px;
+    height: 36px;
+    padding: 8px 10px;
     font-size: 14px;
     font-family: inherit;
     color: inherit;
     resize: none;
-    border: 1px solid #ccc;
+    border: 1px solid #d6d6d6;
+    border-top-color: #cfcfcf;
     box-sizing: border-box;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.1);
 }
 
 
@@ -66,6 +68,10 @@ body {
     box-sizing: border-box;
     user-select: none;
     cursor: pointer;
+}
+
+.button:hover {
+    box-shadow: 0 0 3px rgba(0,0,0,.3);
 }
 
 .button_theme_green {
@@ -125,7 +131,7 @@ body {
     background: none;
     height: 0;
     border-style: solid;
-    border-color: #ccc;
+    border-color: #d6d6d6;
     border-width: 1px 0 0;
 }
 
@@ -136,9 +142,9 @@ body {
     width: 800px;
     margin: 0 auto;
     padding: 30px;
-    background-color: #f5f8fa;
+    background-color: #f8f9fa;
     border-top: 5px solid #5c6;
-    box-shadow: 0 1px 2px rgba(0,0,0,.5);
+    box-shadow: 0 1px 1px rgba(0,0,0,.4);
 }
 
 
@@ -189,7 +195,7 @@ body {
 
 
 .options__fieldset {
-    border: 1px solid #ccc;
+    border: 1px solid #d6d6d6;
     margin-bottom: 50px;
 }
 
